test/rails_app/app/views/validates/new.html.erb
<h1>New validate</h1>

<%= render 'form' %>

<%= link_to 'Back', validates_path %>
