test/rails_app/app/views/rejects/new.html.erb
<h1>New reject</h1>

<%= render 'form' %>

<%= link_to 'Back', rejects_path %>
